<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.MainActivity">

    <item
        android:id="@+id/it_search"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:icon="@drawable/magnify_white"
        android:orderInCategory="100"
        android:title="@string/app_ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/it_filter"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:icon="@drawable/filter_white"
        android:orderInCategory="100"
        android:title="@string/app_ic_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/it_options"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:icon="@drawable/dots_vertical"
        android:orderInCategory="100"
        android:title="@string/app_ic_options"
        app:showAsAction="always" />

</menu>