<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.MainActivity">

    <item
        android:id="@+id/it_options_watchedallepsiodes"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:icon="@drawable/filter_white"
        android:orderInCategory="100"
        android:title="@string/app_options_watchedallepisodes"
        app:showAsAction="never" />

    <item
        android:id="@+id/it_options_watchedallhereepsiodes"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:icon="@drawable/filter_white"
        android:orderInCategory="100"
        android:title="@string/app_options_watchedallhereepisodes"
        app:showAsAction="never" />

    <item
        android:id="@+id/it_options_watchednoneepsiodes"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:icon="@drawable/filter_white"
        android:orderInCategory="100"
        android:title="@string/app_options_watchednooneepisodes"
        app:showAsAction="never" />


</menu>